--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
         </div>
       </section>
 
+      <!-- Clients -->
       <section class="clients section">
         <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
