--- a/portfolio.html
+++ b/portfolio.html
@@ -82,112 +82,130 @@
           <!-- Projects -->
           <ul class="projects-list">
             <li class="projects-list-item">
-              <img
-                class="item-img"
-                src="./images/technoquack.jpg"
-                alt="Веб-сайт проекта Технокряк"
-                width="370"
-              />
-              <div class="item-text">
-                <h2 class="item-title">Технокряк</h2>
-                <p class="item-descr">Веб-сайт</p>
-              </div>
+              <a href="#">
+                <img
+                  class="item-img"
+                  src="./images/technoquack.jpg"
+                  alt="Веб-сайт проекта Технокряк"
+                  width="370"
+                />
+                <div class="item-text">
+                  <h2 class="item-title">Технокряк</h2>
+                  <p class="item-descr">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="projects-list-item">
-              <img
-                class="item-img"
-                src="./images/football.jpg"
-                alt="Постер футбольных команд"
-                width="370"
-              />
-              <div class="item-text">
-                <h2 class="item-title">Постер New Orlean vs Golden Star</h2>
-                <p class="item-descr">Дизайн</p>
-              </div>
+              <a href="#">
+                <img
+                  class="item-img"
+                  src="./images/football.jpg"
+                  alt="Постер футбольных команд"
+                  width="370"
+                />
+                <div class="item-text">
+                  <h2 class="item-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="item-descr">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="projects-list-item">
-              <img
-                class="item-img"
-                src="./images/seafood-restaurant.jpg"
-                alt="Логотип приложения для ресторана Seafood"
-                width="370"
-              />
-              <div class="item-text">
-                <h2 class="item-title">Ресторан Seafood</h2>
-                <p class="item-descr">Приложение</p>
-              </div>
+              <a href="#">
+                <img
+                  class="item-img"
+                  src="./images/seafood-restaurant.jpg"
+                  alt="Логотип приложения для ресторана Seafood"
+                  width="370"
+                />
+                <div class="item-text">
+                  <h2 class="item-title">Ресторан Seafood</h2>
+                  <p class="item-descr">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="projects-list-item">
-              <img
-                class="item-img"
-                src="./images/headphone-prime.jpg"
-                alt="Маркетинговые услуги по продаже техники Prime"
-                width="370"
-              />
-              <div class="item-text">
-                <h2 class="item-title">Проект Prime</h2>
-                <p class="item-descr">Маркетинг</p>
-              </div>
+              <a href="#">
+                <img
+                  class="item-img"
+                  src="./images/headphone-prime.jpg"
+                  alt="Маркетинговые услуги по продаже техники Prime"
+                  width="370"
+                />
+                <div class="item-text">
+                  <h2 class="item-title">Проект Prime</h2>
+                  <p class="item-descr">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="projects-list-item">
-              <img
-                class="item-img"
-                src="./images/boxes.jpg"
-                alt="Логотип с коробками для проекта Boxes"
-                width="370"
-              />
-              <div class="item-text">
-                <h2 class="item-title">Проект Boxes</h2>
-                <p class="item-descr">Приложение</p>
-              </div>
+              <a href="#">
+                <img
+                  class="item-img"
+                  src="./images/boxes.jpg"
+                  alt="Логотип с коробками для проекта Boxes"
+                  width="370"
+                />
+                <div class="item-text">
+                  <h2 class="item-title">Проект Boxes</h2>
+                  <p class="item-descr">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="projects-list-item">
-              <img
-                class="item-img"
-                src="./images/inspiration.jpg"
-                alt="Веб-сайт на тему: Вдохновение не имеет границ"
-                width="370"
-              />
-              <div class="item-text">
-                <h2 class="item-title">Inspiration has no Borders</h2>
-                <p class="item-descr">Веб-сайт</p>
-              </div>
+              <a href="#">
+                <img
+                  class="item-img"
+                  src="./images/inspiration.jpg"
+                  alt="Веб-сайт на тему: Вдохновение не имеет границ"
+                  width="370"
+                />
+                <div class="item-text">
+                  <h2 class="item-title">Inspiration has no Borders</h2>
+                  <p class="item-descr">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="projects-list-item">
-              <img
-                class="item-img"
-                src="./images/limited-edition.jpg"
-                alt="Книга издания Limited Edition"
-                width="370"
-              />
-              <div class="item-text">
-                <h2 class="item-title">Издание Limited Edition</h2>
-                <p class="item-descr">Дизайн</p>
-              </div>
+              <a href="#">
+                <img
+                  class="item-img"
+                  src="./images/limited-edition.jpg"
+                  alt="Книга издания Limited Edition"
+                  width="370"
+                />
+                <div class="item-text">
+                  <h2 class="item-title">Издание Limited Edition</h2>
+                  <p class="item-descr">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="projects-list-item">
-              <img
-                class="item-img"
-                src="./images/lab-project.jpg"
-                alt="Бирка с логотипом LAB проекта"
-                width="370"
-              />
-              <div class="item-text">
-                <h2 class="item-title">Проект LAB</h2>
-                <p class="item-descr">Маркетинг</p>
-              </div>
+              <a href="#">
+                <img
+                  class="item-img"
+                  src="./images/lab-project.jpg"
+                  alt="Бирка с логотипом LAB проекта"
+                  width="370"
+                />
+                <div class="item-text">
+                  <h2 class="item-title">Проект LAB</h2>
+                  <p class="item-descr">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="projects-list-item">
-              <img
-                class="item-img"
-                src="./images/growing-business.jpg"
-                alt="Приложение для проекта Growing Business"
-                width="370"
-              />
-              <div class="item-text">
-                <h2 class="item-title">Growing Business</h2>
-                <p class="item-descr">Приложение</p>
-              </div>
+              <a href="#">
+                <img
+                  class="item-img"
+                  src="./images/growing-business.jpg"
+                  alt="Приложение для проекта Growing Business"
+                  width="370"
+                />
+                <div class="item-text">
+                  <h2 class="item-title">Growing Business</h2>
+                  <p class="item-descr">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
